# python-playwright

./: README.md  conftest.py  pyproject.toml
enums/: User.py
pages/: login_page.py  products_list_page.py
pages/components/: header.py  inventory_item.py
tests/: test_add_to_cart.py  test_login.py
utils/: constants.py
